--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
 
 
 
-
     Kyle Burton
     Founder & CEO, Huddle
 
@@ -106,18 +105,21 @@
 
     Get Started For Free
 
-    Phone: +1-543-123-4567
-    example@fylo.com
+    <footer>
 
-    About Us
-    Jobs
-    Press
-    Blog
+      Phone: +1-543-123-4567
+      example@fylo.com
 
-    Contact Us
-    Terms
-    Privacy
+      About Us
+      Jobs
+      Press
+      Blog
 
+      Contact Us
+      Terms
+      Privacy
+
+    </footer>
   </main>
 
 </body>
