--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="styles/style.css">
 
   <title></title>
 
 
 </head>
 
-<body>
+<body style="background-color: red;">
   <header class="w-80 m-auto row">
     <div class="fb-20">
       <img src="/images/logo.svg" alt="" id="logo">
